# docs/swagger.yaml
@@ -162,6 +162,10 @@ paths:
         in: query
         name: language
         type: string
+      - description: sort by alphabet asc/ desc, default asc
+        in: query
+        name: sort
+        type: string
       produces:
       - application/json
       responses:
